--- a/lsbd/package.json
+++ b/lsbd/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
     "react-redux": "^9.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "typewriter-effect": "^2.21.0",
