--- a/lsbd/package.json
+++ b/lsbd/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.9.0",
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
     "react-redux": "^9.1.0",
