--- a/lsbd/package.json
+++ b/lsbd/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "firebase": "^10.9.0",
+    "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
+    "react-modal-image": "^2.6.0",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
