--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.2.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "stripe": "^15.4.0"
   }
 }
