--- a/lsbd/package.json
+++ b/lsbd/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^5.3.1",
     "@floating-ui/react": "^0.26.12",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.1",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
@@ -16,6 +17,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "firebase": "^10.9.0",
+    "flatted": "^3.3.1",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
